--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Sankey D3 visualization proof of concept",
   "main": "index.js",
   "scripts": {
+    "start": "parcel index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/LonnyGomes/sankey-diagram-poc/issues"
   },
-  "homepage": "https://github.com/LonnyGomes/sankey-diagram-poc#readme"
+  "homepage": "https://github.com/LonnyGomes/sankey-diagram-poc#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4"
+  }
 }
