--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "url": "https://github.com/LonnyGomes/sankey-diagram-poc/issues"
   },
   "homepage": "https://github.com/LonnyGomes/sankey-diagram-poc#readme",
-  "dependencies": {},
+  "dependencies": {
+    "d3": "^5.13.1",
+    "d3-sankey": "^0.12.3"
+  },
   "devDependencies": {
+    "@types/d3": "^5.7.2",
     "parcel-bundler": "^1.12.4"
   }
 }
